[tool.poetry]
name = "pythonwhat"
version = "2.25.0"
description = "Submission correctness tests for Python"
authors = ["Filip Schouwenaars <filip@datacamp.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
asttokens = "^2.2.1"
black = "^23.7.0"
dill = "^0.3.7"
Jinja2 = "^3.1.2"
markdown2 = "^2.4.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
protowhat = {git = "https://github.com/coursekata/protowhat.git"}
Pygments = "^2.16.1"


[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.1"
h5py = "^3.9.0"
html5lib = "^1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
scipy = "^1.11.1"
seaborn = "^0.12.2"
sphinx = "^7.1.2"
sphinx-jinja = "^2.0.2"
sphinx-rtd-theme = "^1.2.2"
sphinxprettysearchresults = "^0.3.5"
sqlalchemy = "^2.0.19"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
